# nrfgcc

./: .gitmodules
projects/blinky/: CMakeLists.txt  main.cpp
